# ElasticFusion_Net

./: .gitignore  CMakeLists.txt  main.cpp
ElasticFusion/Tools/: CMakeLists.txt  CameraInterface.h  OpenNI2Interface.cpp  OpenNI2Interface.h
host/: host.cpp
jetsonTK1/: CMakeLists.txt  FindOpenNI2.cmake  main.cpp
recv_terminal/: CMakeLists.txt  main.cpp
